@@ -1,4 +1,7 @@
-2011-10-21  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-12-09  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+
+	* gdb.py: Implement the ``define``, ``commands`` and ``document`` gdb
+	commands.
 	* debugger.py: Only map 'nbkey' when pyclewn keys are being mapped.
 	* debugger.py: Fix after changing directory from vim, a second console
 	is created after the first one is hidden, which causes problems when
